Refactor : 코드 simplify